# SliceCore

./: CMakeLists.txt  test.cpp
include/: BaseDataStruct.h  export.h
source/: ComDocIO.cpp  export.cpp
src/: base_data_structure.h  compound_doc_io.cpp  compound_doc_io.h  export.cpp  export.h
